--- a/html5_CSS3/css/style.css
+++ b/html5_CSS3/css/style.css
@@ -1,4 +1,25 @@
 body {
     background: rgb(123,140,310);
+    margin-right: 200px;
+    margin-left: 30px;
 
+}
+header {
+    margin-top: 100px;
+}
+
+h1 {
+    color: blue;
+    font-family: fantasy;
+}
+h2 {
+    font-family: fantasy;
+}
+
+p {
+    font-size: 18px;
+}
+
+img {
+    margin-bottom: 20px;
 }
